--- a/kinectbook/index.html
+++ b/kinectbook/index.html
@@ -14,7 +14,7 @@
     }
     #container {
       margin: 0 auto;
-      width: 700px;
+      width: 800px;
     }
     h1 { font-size: 3.8em; color: #d2db8f; margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
@@ -46,10 +46,14 @@
     </div>
 
     <h1><a href="http://github.com/hagino3000/kinectbook">Kinectbook Support</a><br>
-      <span class="small">by <a href="http://github.com/hagino3000">Takashi Nishibayashi(hagino3000)</a></span></h1>
+      <span class="small">by <a href="http://github.com/hagino3000">Takashi Nishibayashi (hagino3000)</a></span></h1>
 
     <div class="description">
       「キネクトハッカーズマニュアル」サポートページ
+    </div>
+
+    <div>
+    <img src="./img/book.jpg" width=400/>
     </div>
 
     <ul>
