--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-This is my github pages
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Takashi Nishibayashi (hagino3000)</title>
+  <meta name="description" content="Takashi Nishibayashi's Web Page">
+  <meta name="author" content="Takashi Nishibayashi">
+</head>
+
+<body>
+  <h1>Contents</h1>
+
+  <ul>
+    <li><a href="./profile/index.html">About me</a></li>
+    <li><a href="https://hagino3000.blogspot.com">Blog</a></li>
+    <li><a href="https://twitter.com/hagino3000">Twitter</a></li>
+    <li><a href="./kinectbook/">Kinect Hacker's manual support page</a></li>
+  </ul>
+
+</body>
+</html>
