Add interest section

--- a/profile/index.html
+++ b/profile/index.html
@@ -24,6 +24,12 @@
       </ul>
     </div>
 
+    <h2>興味・関心</h2>
+    <ul>
+      <li>意思決定システムの開発: データに基づいた意思決定の自動化</li>
+      <li>人の時間を生み出すテクノロジー</li>
+      <li>因果効果推論・メカニズムデザイン</li>
+    </ul>
 
     <h2>経歴</h2>
     <ul>
@@ -60,7 +66,6 @@
       <li><a href="https://books.mdn.co.jp/books/6312/" target="_blank">すべての人に知っておいて欲しいJavaScriptの基本原則 (共著), MdN, (2013)</a></li>
       <li><a href="https://www.rutles.net/products/detail.php?product_id=301" target="_blank">キネクトハッカーズマニュアル (共著), ラトルズ, (2011)</a></li>
       <li>連載: JavaScriptイマドキ活用術, WEB+DB PRESS Vol.54 - 56, 技術評論社 (2009 - 2010)</a></li>
-
     </ul>
 
     <h2>講演</h2>
