mod profile page

--- a/profile/index.html
+++ b/profile/index.html
@@ -12,6 +12,8 @@
 
   <main>
     <div style="text-align:center">
+      <h1>略歴・活動</h1>
+      <br>
       <img src="./img/profile.png" class="profile" />
       <h1>西林 孝 Takashi Nishibayashi</h1>
 
@@ -24,6 +26,8 @@
       </ul>
     </div>
 
+    <h2>連絡先</h2>
+    takashi.nishibayashi (at) gmail.com
     <h2>興味・関心</h2>
     <ul>
       <li>意思決定システムの開発: データに基づいた意思決定の自動化</li>
@@ -57,7 +61,7 @@
       </li>
     </ul>
 
-    <h2>出版</h2>
+    <h2>出版・寄稿</h2>
     <ul>
       <li><a href="https://www.oreilly.co.jp/books/9784873119472/" target="_blank">仕事ではじめる機械学習 (共著), オライリージャパン (2017, 2020)</a></li>
       <li><a href="https://www.ai-gakkai.or.jp/published_books/journals_of_jsai/past_journals/in2017/vol32_no4/" target="_blank">アドネットワークにおける広告配信計画の最適化 人工知能学会誌 Vol. 32 No. 4 (2017/07)</a></li>
@@ -70,19 +74,23 @@
 
     <h2>講演</h2>
     <ul>
-      <li><a href="https://pycon.jp/2015/ja/schedule/presentation/61/" target="_blank">PyConJP 2015 トークセッション「アドネットワークのデータ解析チームを支える技術」</a></li>
+      <li><a href="https://pycon.jp/2015/ja/schedule/presentation/61/" target="_blank">PyConJP 2015 トークセッション「アドネットワークのデータ解析チームを支える技術」</a>(2015)</li>
     </ul>
 
     <h2>インタビュー</h2>
     <ul>
-      <li><a href="https://www.lambdanote.com/products/engineers-in-voyage" target="_blank">Engineers in VOYAGE ― 事業をエンジニアリングする技術者たち</a></li>
-      <li><a href="https://focus.voyagegroup.com/post-0020/" target="_blank">VOYAGEのトップエンジニアが語る、機械学習とDSP・アドネットワークの可能性</a></li>
-      <li><a href="https://www.youtube.com/watch?v=n45KY9AYzCs" target="_blank">そーだいなるVOYAGE GROUPの裏側 #DS エンジニアによるビジネスのための機械学習</a></li>
+      <li><a href="https://www.youtube.com/watch?v=n45KY9AYzCs" target="_blank">そーだいなるVOYAGE GROUPの裏側 #DS エンジニアによるビジネスのための機械学習</a>(2021)</li>
+      <li><a href="https://www.lambdanote.com/products/engineers-in-voyage" target="_blank">Engineers in VOYAGE ― 事業をエンジニアリングする技術者たち</a>(2020)</li>
+      <li><a href="https://focus.voyagegroup.com/post-0020/" target="_blank">VOYAGEのトップエンジニアが語る、機械学習とDSP・アドネットワークの可能性</a>(2020)</li>
+    </ul>
+
+    <h2>学会活動</h2>
+    <ul>
+      <li>人工知能学会全国大会(JSAI)プログラム委員 企画・一般セッション担当 (2019 - )</li>
     </ul>
 
     <h2>コミュニティ</h2>
     <ul>
-      <li>人工知能学会全国大会(JSAI)プログラム委員 企画・一般セッション担当 (2019 - )</li>
       <li><a href="https://sites.google.com/site/shibuyani/" target="_blank">Shibuya.NI</a> オーガーナイザー (2011 - 2012)</li>
     </ul>
 
