--- a/profile/index.html
+++ b/profile/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+  <header>
+    <a href="./index_en.html">English version</a>
+  </header>
 
   <main>
     <div style="text-align:center">
@@ -63,13 +66,13 @@
 
     <h2>出版・寄稿</h2>
     <ul>
-      <li><a href="https://www.oreilly.co.jp/books/9784873119472/" target="_blank">仕事ではじめる機械学習 (共著), オライリージャパン (2017, 2020)</a></li>
-      <li><a href="https://www.ai-gakkai.or.jp/published_books/journals_of_jsai/past_journals/in2017/vol32_no4/" target="_blank">アドネットワークにおける広告配信計画の最適化 人工知能学会誌 Vol. 32 No. 4 (2017/07)</a></li>
+      <li><a href="https://www.oreilly.co.jp/books/9784873119472/" target="_blank">有賀 康顕, 中山 心太, 西林孝:仕事ではじめる機械学習, オライリージャパン (2017, 2020)</a></li>
+      <li><a href="https://www.ai-gakkai.or.jp/published_books/journals_of_jsai/past_journals/in2017/vol32_no4/" target="_blank">西林孝: アドネットワークにおける広告配信計画の最適化 人工知能学会誌 Vol. 32 No. 4 (2017/07)</a></li>
       <li><a href="https://dl.acm.org/doi/abs/10.1145/3097983.3098137" target="_blank">Komiyama, Junpei, et al. "Statistical emerging pattern mining with multiple testing correction." Proceedings of the 23rd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining. 2017.</a></li>
-      <li><a href="https://books.mdn.co.jp/books/6312/" target="_blank">すべての人に知っておいて欲しいJavaScriptの基本原則 (共著), MdN, (2013)</a></li>
-      <li><a href="https://www.jstage.jst.go.jp/article/itej/66/9/66_755/_article/-char/ja/" target="_blank">Kinectの仕組みとナチュラルユーザインタフェース 映像情報メディア学会誌 Vol. 66, No. 9 (2012)</a></li>
-      <li><a href="https://www.rutles.net/products/detail.php?product_id=301" target="_blank">キネクトハッカーズマニュアル (共著), ラトルズ, (2011)</a></li>
-      <li>連載: JavaScriptイマドキ活用術, WEB+DB PRESS Vol.54 - 56, 技術評論社 (2009 - 2010)</a></li>
+      <li><a href="https://books.mdn.co.jp/books/6312/" target="_blank">岩永 賢明, 勝間 亮, 嶋田 大輔, 土屋 勇人, 西林 孝, 比留間 和也, 吉田 雷::すべての人に知っておいて欲しいJavaScriptの基本原則, MdN, (2013)</a></li>
+      <li><a href="https://www.jstage.jst.go.jp/article/itej/66/9/66_755/_article/-char/ja/" target="_blank">西林孝: Kinectの仕組みとナチュラルユーザインタフェース 映像情報メディア学会誌 Vol. 66, No. 9 (2012)</a></li>
+      <li><a href="https://www.rutles.net/products/detail.php?product_id=301" target="_blank">西林孝, 小野 憲史:キネクトハッカーズマニュアル, ラトルズ, (2011)</a></li>
+      <li>西林孝: 連載 JavaScriptイマドキ活用術, WEB+DB PRESS Vol.54 - 56, 技術評論社 (2009 - 2010)</a></li>
     </ul>
 
     <h2>講演</h2>
