--- a/profile/index.html
+++ b/profile/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <a href="./index_en.html">English version</a>
+    <a href="./en.html">English version</a>
   </header>
 
   <main>
