--- a/profile/en.html
+++ b/profile/en.html
@@ -33,9 +33,9 @@
     takashi.nishibayashi (at) gmail.com
     <h2>Interests</h2>
     <ul>
-      <li>Designing and Develop decision making systems based on data</li>
+      <li>Designing and Developing decision-making systems based on data mining</li>
       <li>Saving time tecnology</li>
-      <li>Causal Inference is Statistics, Mechanism design</li>
+      <li>Causal Inference in Statistics, Mechanism design</li>
     </ul>
 
     <h2>Education and work history</h2>
