--- a/profile/index.html
+++ b/profile/index.html
@@ -40,7 +40,8 @@
 
     <h2>経歴</h2>
     <ul>
-      <li><a href="https://voyagegroup.com" target="_blank">株式会社VOYAGE GROUP</a> ソフトウェアエンジニア (2011/08 - 現在) </li>
+      <li><a href="https://ubie.life" target="_blank">Ubie株式会社</a> 機械学習エンジニア (2022/04 - 現在) </li>
+      <li><a href="https://voyagegroup.com" target="_blank">株式会社VOYAGE GROUP</a> ソフトウェアエンジニア (2011/08 - 2022/03) </li>
       <li><a href="https://www.mashmatrix.co.jp/" target="_blank">株式会社マッシュマトリックス</a> ソフトウェアエンジニア (2009/05 - 2011/07)</li>
       <li><a href="https://www.dreamarts.co.jp/" target="_blank">株式会社ドリーム・アーツ</a> ソフトウェアエンジニア (2008/05 - 2009/04)</li>
       <li><a href="https://www.tecnos.co.jp/" target="_blank">株式会社テクノスジャパン</a> システムエンジニア (2003/04 - 2008/04)</li>
