--- a/profile/index.html
+++ b/profile/index.html
@@ -34,6 +34,7 @@
     <h2>興味・関心</h2>
     <ul>
       <li>意思決定システムの開発: データに基づいた意思決定の自動化</li>
+      <li>Healthcare, 公衆衛生</li>
       <li>人の時間を生み出すテクノロジー</li>
       <li>因果効果推論・メカニズムデザイン</li>
     </ul>
@@ -50,6 +51,7 @@
 
     <h2>ブログ・講演資料</h2>
     <ul>
+      <li><a href="https://zenn.dev/hagino3000" target="_blank">https://zenn.dev/hagino3000</a></li>
       <li><a href="https://hagino3000.blogspot.com" target="_blank">https://hagino3000.blogspot.com</a></li>
       <li><a href="https://speakerdeck.com/hagino3000" target="_blank">Speaker Deck (2016 - 現在)</a></li>
       <li><a href="https://www.slideshare.net/hagino_3000" target="_blank">Slide Share (2008 - 2015)</a></li>
