--- a/profile/index.html
+++ b/profile/index.html
@@ -35,8 +35,7 @@
     <ul>
       <li>意思決定システムの開発: データに基づいた意思決定の自動化</li>
       <li>Healthcare, 公衆衛生</li>
-      <li>人の時間を生み出すテクノロジー</li>
-      <li>因果効果推論・メカニズムデザイン</li>
+      <li>因果効果推論, メカニズムデザイン</li>
     </ul>
 
     <h2>経歴</h2>
